Add path animation

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,6 +12,18 @@
   src: url("../fonts/Raleway-SemiBold.ttf");
 }
 
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 1.2s linear forwards;
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
 
 
 html {
